--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -12,6 +12,7 @@
 
     <body>
     <div class="page-header">
+        <a href="{% url 'post_new' %}" class=""top-menu"><span class ="glyphicon glyphicon-plus"></span></a>
         <h1><a href="/">Online iSAMES Report</a></h1>
     </div>
     <div class="content container">
