--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -13,7 +13,7 @@
     <body>
     <div class="page-header">
         {% if user.is_authenticated %}
-            <a href="{% url 'post_new' %}" class=""top-menu"><span class ="glyphicon glyphicon-plus"></span></a>
+            <a href="{% url 'post_new' %}" class="top-menu"><span class ="glyphicon glyphicon-plus"></span></a>
         {% endif %}
 
         <h1><a href="/">Online iSAMES Report</a></h1>
